feat: 添加用于模块管理的编辑器 API，包括 CRUD 操作和文件处理
- 实现了模块验证和扫描功能
- 添加了用于检索模块列表和详细信息的 API 端点
- 为模块创建、更新元数据和删除创建端点
- 开发具有脚本检索、创建、更新和删除端点的脚本管理
- 引入了 i18n 支持和翻译文件管理端点
- 添加了带有验证的演示和资产上传功能
- 实现了构建状态检索

样式: 添加按钮、徽章、卡片、警报、输入等组件样式

- 为可重用组件创建了全面的 CSS 文件
- 为各种按钮类型和尺寸定义样式
- 添加了徽章、标签、卡片、警报和输入字段的样式
- 包括暗模式的响应式设计注意事项

feat: 为可重用图标创建 SVG 图标库

- 为 SVG 图标开发了 Nunjucks 模板
- 包含编辑、复制、检查、GitHub等常用图标
- 提供宏以便轻松包含在模板中

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -36,7 +36,9 @@
     "references": "References",
     "copyScript": "Copy",
     "copySuccess": "Copied!",
-    "copyFail": "Copy failed"
+    "copyFail": "Copy failed",
+    "editScript": "Edit script",
+    "editModule": "Edit module"
   },
   "issues": {
     "pageTitle": "Build Issues",
