--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -40,6 +40,11 @@
     "editScript": "Edit script",
     "editModule": "Edit module"
   },
+  "404": {
+    "title": "Page Not Found",
+    "text": "The page you are looking for does not exist.",
+    "home": "Back to Home"
+  },
   "issues": {
     "pageTitle": "Build Issues",
     "heading": "Build Issues Report",
