支持记住用户语言偏好并优化语言切换体验

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -9,7 +9,9 @@
   "base": {
     "moduleCount": "{count} modules on site",
     "githubAriaLabel": "GitHub repository",
-    "languageSwitchTitle": "Language"
+    "languageSwitchTitle": "Language",
+    "rememberLanguage": "Remember my language",
+    "rememberLanguageTooltip": "Auto redirect to your preferred language"
   },
   "home": {
     "searchPlaceholder": "Search modules...",
