修复一些格式和拼写问题

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -34,7 +34,7 @@
     "scopeMap": { "global": "Global", "sprite": "Sprite", "choose": "Choose as needed" },
     "notes": "Notes",
     "demo": "Demo",
-    "openInTW": "Open in Turbowarp Editor",
+    "openInTW": "Open in TurboWarp Editor",
     "references": "References",
     "copyScript": "Copy",
     "copySuccess": "Copied!",
