--- a/src/i18n/zh-cn.json
+++ b/src/i18n/zh-cn.json
@@ -34,7 +34,7 @@
     "scopeMap": { "global": "全局", "sprite": "角色", "choose": "按需自选" },
     "notes": "备注",
     "demo": "演示",
-    "openInTW": "在 Turbowarp 编辑器中打开",
+    "openInTW": "在 TurboWarp 编辑器中打开",
     "references": "参考链接",
     "copyScript": "复制",
     "copySuccess": "已复制！",
